--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -33,10 +33,32 @@ jobs:
         run: |
           mkdir -p deno
           cp README.md LICENSE CONTRIBUTORS NOTICE index.d.ts deno
+      - name: Rewrite README.md file
+        run: |
+          # Replace internal package links with deno.land links:
+          find ./deno/README.md -print0 | xargs -0 sed -Ei "/^\[@stdlib[^:]+: https:\/\/github.com\/stdlib-js\// {
+              h
+              s/:.*/: https:\/\/deno.land\/x\/stdlib_/
+              x
+              s/[^:]+: https:\/\/github.com\/stdlib-js\///
+              s/[\/-]/_/g
+              H
+              g
+              s/\n//
+          }"
+
+          # Change wording of project description to avoid reference to JavaScript and Node.js:
+          find ./deno/README.md -print0 | xargs -0 sed -Ei "s/a standard library for JavaScript and Node.js, /a standard library /g"
+
+          # Remove `installation`, `cli`, and `c` sections:
+          find ./deno/README.md -print0 | xargs -0 perl -0777 -i -pe "s/<section class=\"installation\">[^<]+<\/section>//g"
+          find ./deno/README.md -print0 | xargs -0 perl -0777 -i -pe "s/<section class=\"cli\">[^<]+<\/section>\n\n<!-- \/.cli -->//g"
+          find ./deno/README.md -print0 | xargs -0 perl -0777 -i -pe "s/<section class=\"c\">[^<]+<\/section>\n\n<!-- \/.c -->//g"
+
       - name: Prepare tag
         id: prepare_tag
         run: |
-          TAG_NAME="v0.0.1"
+          TAG_NAME="v0.0.2"
           echo "::set-output name=tag_name::${TAG_NAME}"
           echo "::set-output name=publish_tag_name::deno-${TAG_NAME}"
       - name: Publish to deno branch
@@ -45,8 +67,9 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./deno
           publish_branch: deno
-          keep_files: true
+          keep_files: false
           user_name: 'stdlib-bot'
           user_email: 'noreply@stdlib.io'
           tag_name: ${{ steps.prepare_tag.outputs.publish_tag_name }}
           tag_message: 'Release ${{ steps.prepare_tag.outputs.tag_name }}'
+          enable_jekyll: true
